--- a/app/src/main/res/layout/app_intro_1.xml
+++ b/app/src/main/res/layout/app_intro_1.xml
@@ -11,7 +11,7 @@
         android:paddingLeft="32dp"
         android:layout_weight="3"
         android:fontFamily="sans-serif-thin"
-        android:textColor="#ffffff"
+        android:textColor="#fffff1"
         android:paddingRight="32dp"
         android:textSize="28sp"
         android:text="@string/app_intro_1_title" />
